--- a/ProjektApp/Views/Auctions/UserAuctions.cshtml
+++ b/ProjektApp/Views/Auctions/UserAuctions.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ProjectApp.ViewModels.AuctionVM>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "UserAuctions";
 }
 
-<h1>Index</h1>
+<h1>UserAuctions</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,6 +12,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -37,6 +40,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
@@ -56,7 +62,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id=item.Id}) |
-                @Html.ActionLink("Bids", "Details", new {id=item.Id}) |
+                @Html.ActionLink("Bids", "Details", new {  id=item.Id  }) |
                 @Html.ActionLink("Add Bid","EditBid",new {id=item.Id})
             </td>
         </tr>
