--- a/ProjektApp/Views/Home/Privacy.cshtml
+++ b/ProjektApp/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h3>@ViewData["Title"]</h3>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This website complies with the European Union's (EU) General Data Protection Regulation (GDPR). Your privacy is protected and personal data is not provided to a third-party company.</p>
