--- a/ProjektApp/Views/Shared/_Layout.cshtml
+++ b/ProjektApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="Index">Auctions</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="Index">All Auctions</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="UserAuctions">Your Auctions</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -39,12 +42,6 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - ProjectApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
