--- a/ProjektApp/Views/Auctions/Create.cshtml
+++ b/ProjektApp/Views/Auctions/Create.cshtml
@@ -23,6 +23,10 @@
                 <label asp-for="StartingBid" class="control-label"></label>
                 <input asp-for="StartingBid" class="form-control" />
                 <span asp-validation-for="StartingBid" class="text-danger"></span>
+                <br></br>
+                <label asp-for="EndingDate" class="control-label"></label>
+                <input asp-for="EndingDate" class="form-control" />
+                <span asp-validation-for="EndingDate" class="text-dange"></span>
             </div>
             <br>
             <div class="form-group">
