--- a/ProjektApp/Views/Auctions/Details.cshtml
+++ b/ProjektApp/Views/Auctions/Details.cshtml
@@ -36,6 +36,12 @@
             @Html.DisplayFor(model => model.CreatedDate)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EndingDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EndingDate)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsInProgress)
         </dt>
         <dd class="col-sm-10">
@@ -54,7 +60,10 @@
                 <th>
                     <b>Amount</b>
                 </th>
-                <th></th>
+                <th>
+                    <b>Owner</b>
+                </th>
+                <th>
             </tr>
         </thead>
         <tbody>
@@ -66,6 +75,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Amount)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BidOwner)
                     </td>
                 </tr>
             }
