--- a/ProjektApp/Views/Auctions/Index.cshtml
+++ b/ProjektApp/Views/Auctions/Index.cshtml
@@ -69,7 +69,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id=item.Id}) |
                 @Html.ActionLink("Bids", "Details", new {id=item.Id}) |
-                @Html.ActionLink("Add Bid","EditBid",new {id=item.Id})
+                @Html.ActionLink("Add Bid","AddBid",new {id=item.Id})
             </td>
         </tr>
 }
