--- a/ProjektApp/Views/Auctions/UserAuctions.cshtml
+++ b/ProjektApp/Views/Auctions/UserAuctions.cshtml
@@ -68,8 +68,8 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id=item.Id}) |
-                @Html.ActionLink("Bids", "Details", new {  id=item.Id  }) |
-                @Html.ActionLink("Add Bid","EditBid",new {id=item.Id})
+                @Html.ActionLink("Bids", "Details", new {id=item.Id}) |
+                @Html.ActionLink("Add Bid","AddBid",new {id=item.Id})
             </td>
         </tr>
 }
