--- a/ProjektApp/Views/Shared/_Layout.cshtml
+++ b/ProjektApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="Index">All Auctions</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="Index">Auctions In Progress</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="UserAuctions">Your Auctions</a>
