--- a/ProjektApp/Views/Auctions/WonAuctions.cshtml
+++ b/ProjektApp/Views/Auctions/WonAuctions.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ProjectApp.ViewModels.AuctionVM>
 
 @{
-    ViewData["Title"] = "UserAuctions";
+    ViewData["Title"] = "WonAuctions";
 }
 
-<h1>UserAuctions</h1>
+<h1>WonAuctions</h1>
 
 
 <table class="table">
@@ -65,7 +65,9 @@
                 @Html.DisplayFor(modelItem => item.IsInProgress)
             </td>
             <td>
-                @Html.ActionLink("Bids", "Details", new {id=item.Id}) 
+               
+                @Html.ActionLink("Bids", "Details", new {  id=item.Id }) 
+                
             </td>
         </tr>
 }
