--- a/ProjektApp/Views/Auctions/YourBidAuctions.cshtml
+++ b/ProjektApp/Views/Auctions/YourBidAuctions.cshtml
@@ -1,15 +1,16 @@
 ﻿@model IEnumerable<ProjectApp.ViewModels.AuctionVM>
 
 @{
-    ViewData["Title"] = "UserAuctions";
+    ViewData["Title"] = "YourBidAuctions";
 }
 
-<h1>UserAuctions</h1>
+<h1>YourBidAuctions</h1>
 
 
 <table class="table">
     <thead>
         <tr>
+
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -65,7 +66,8 @@
                 @Html.DisplayFor(modelItem => item.IsInProgress)
             </td>
             <td>
-                @Html.ActionLink("Bids", "Details", new {id=item.Id}) 
+                @Html.ActionLink("Bids", "Details", new {id=item.Id}) |
+                @Html.ActionLink("Add Bid","AddBid",new {id=item.Id})
             </td>
         </tr>
 }
