--- a/ProjektApp/Views/Shared/_Layout.cshtml
+++ b/ProjektApp/Views/Shared/_Layout.cshtml
@@ -19,17 +19,18 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="Index">Auctions In Progress</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="UserAuctions">Your Auctions</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="YourBidAuctions"> Bidded Auctions in progress </a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auctions" asp-action="WonAuctions">Won Auctions</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
