--- a/ProjektApp/Views/Auctions/AddBid.cshtml
+++ b/ProjektApp/Views/Auctions/AddBid.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "AddBid";
 }
 
-<h1>AddBid</h1>
-
-<h4>AddBidVM</h4>
+<h4>Add Your Bid</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
