--- a/ProjektApp/Views/Auctions/Create.cshtml
+++ b/ProjektApp/Views/Auctions/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create new auction";
 }
 
-<h1>Create new Auction</h1>
+<h4>Create new auction</h4>
 
 <hr />
 <div class="row">
