--- a/ProjektApp/Views/Auctions/Details.cshtml
+++ b/ProjektApp/Views/Auctions/Details.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Auction Details</h4>
+    <h4>Auction details</h4>
     <hr />
     <dl class="row">
 
