--- a/ProjektApp/Views/Auctions/AddBid.cshtml
+++ b/ProjektApp/Views/Auctions/AddBid.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "AddBid";
 }
 
-<h1>AddBid</h1>
-
-<h4>AddBidVM</h4>
+<h4>Add your bid</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,6 +26,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+@if (TempData["Status"] != null) {
+    <script>alert("@TempData["Status"]")</script>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
