--- a/ProjektApp/Views/Auctions/Edit.cshtml
+++ b/ProjektApp/Views/Auctions/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>EditVM</h4>
+<h4>Edit description</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
